# af3cli

./: README.md  pyproject.toml
.github/workflows/: unittests.yaml
examples/: README.md
examples/bash_cli/: example_1J8F
examples/cli/: example_1J8F  example_4P5J_FASTA_reader  example_7CR2  example_DNA  example_RNA_fasta_reader  example_bonds  example_modifications_PTM  example_protein_CCD  example_protein_SMILES
examples/jupyter/: build_from_FASTA.ipynb  build_multiple_af3inputs_from_FASTA.ipynb  example_FASTA_to_multiple_input_files.ipynb
examples/paper/: cif_searcher.py
examples/paper/CCD/: cif_searcher.py
examples/paper/Complex_System/: intasome_core_8W09
examples/paper/Insulin/: Insulin_dimeric  Insulin_hexameric  Insulin_monomeric_raw  Insulin_monomeric_water
examples/paper/MEK1_MAP2K1/: covalent_Ligand_MEK1_
examples/paper/final/: Bond  rcsb_pdb_8YP4 _edited.fasta
examples/paper/final_for_paper/: Bond  CDK2.fasta  Insulin_hexameric_monomeric_paper  Insulin_hexameric_monomeric_paper.py  complex_system  complex_system_protein_vDNA.fasta  (+2 more)
examples/python/: example_1J8F.py  example_4P5J.py  example_DNA.py  example_RNA_fasta_reader.py  example_bonds.py  example_modifications_PTM.py  example_protein_CCD.py  example_protein_SMILES.py
jupyter/: build_from_FASTA.ipynb  build_multiple_af3inputs_from_FASTA.ipynb  demo_seq.fasta
src/af3cli/: __init__.py  __main__.py  builder.py  exception.py  input.py  io.py  ligand.py  seqid.py  sequence.py
tests/: test_bond.py  test_builder.py  test_io.py  test_ligand.py  test_seqid.py  test_sequence.py
(+6 files in other folders)
